@@ -13,7 +13,7 @@ echo.
 
 REM -------------------------------------  
 REM Default parameters for a basic server.
-java -Xms1280m -Xmx8192m -XX:MaxHeapSize=8192m -Xdebug -XX:MaxNewSize=24m -XX:NewSize=24m -XX:+UseParNewGC -XX:+CMSParallelRemarkEnabled -XX:+UseConcMarkSweepGC -XX:-UseSplitVerifier -ea -javaagent:./libs/al-commons.jar -cp ./libs/*;./libs/AL-Game.jar com.aionemu.gameserver.GameServer
+java -Xms1280m -Xmx8192m -XX:MaxHeapSize=8192m -Xdebug -ea -javaagent:./libs/al-commons.jar -cp ./libs/*;./libs/AL-Game.jar com.aionemu.gameserver.GameServer
 REM -------------------------------------
 SET CLASSPATH=%OLDCLASSPATH%
 
